Attempt to fix verticl alignment of skip button

--- a/src/main/webapp/test/stylesheet.css
+++ b/src/main/webapp/test/stylesheet.css
@@ -55,11 +55,13 @@ html, body {
     background-color: #F55;
 }
 #tutSkipText {
-    display: table-cell;
-    vertical-align: middle;
+    position: absolute;
+    width:100%;
     text-align: center;
-    font-size: 20pt;
-    color: #FFF;
+    font-size:20pt;
+    color:#FFF;
+    top:50%;
+    transform: translateY(-50%);
 }
 .bodyContent {
     position: relative;
